Better line search

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,10 @@
 		"@turf/turf": "7.0.0",
 		"dayjs": "1.11.11",
 		"embla-carousel-wheel-gestures": "8.0.1",
-		"fuse.js": "^7.0.0",
 		"inflected": "2.1.0",
 		"luxon": "3.4.4",
 		"maplibre-gl": "4.4.1",
+		"minisearch": "^7.0.0",
 		"next": "14.2.4",
 		"next-intl": "3.15.2",
 		"react": "18.3.1",
