Add typescript plugin css-modules

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
 		"postcss": "8.4.38",
 		"postcss-preset-mantine": "1.15.0",
 		"postcss-simple-vars": "7.0.1",
-		"typescript": "5.4.5"
+		"typescript": "5.4.5",
+		"typescript-plugin-css-modules": "^5.1.0"
 	}
 }
