--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -43,6 +43,9 @@
     "jsx": "preserve",
     "plugins": [
       {
+        "name": "typescript-plugin-css-modules"
+      },
+      {
         "name": "next"
       }
     ],
