--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,26 @@
 		"lint:fix": "eslint . --fix && npx stylelint . --fix"
 	},
 	"dependencies": {
-		"@carrismetropolitana/eslint": "2024.6.1717593318",
-		"@mantine/carousel": "7.10.2",
-		"@mantine/charts": "7.10.2",
-		"@mantine/core": "7.10.2",
-		"@mantine/dates": "7.10.2",
-		"@mantine/form": "7.10.2",
-		"@mantine/hooks": "7.10.2",
-		"@mantine/modals": "7.10.2",
+		"@carrismetropolitana/eslint": "20240622.50.2",
+		"@mantine/carousel": "7.11.2",
+		"@mantine/charts": "7.11.2",
+		"@mantine/core": "7.11.2",
+		"@mantine/dates": "7.11.2",
+		"@mantine/form": "7.11.2",
+		"@mantine/hooks": "7.11.2",
+		"@mantine/modals": "7.11.2",
 		"@piotr-cz/swr-idb-cache": "^1.0.3",
 		"@rajesh896/broprint.js": "2.1.1",
-		"@tabler/icons-react": "3.6.0",
+		"@tabler/icons-react": "3.11.0",
 		"@turf/turf": "7.0.0",
 		"dayjs": "1.11.11",
 		"embla-carousel-wheel-gestures": "8.0.1",
 		"inflected": "2.1.0",
 		"luxon": "3.4.4",
-		"maplibre-gl": "4.4.1",
-		"minisearch": "^7.0.0",
-		"next": "14.2.4",
-		"next-intl": "3.15.2",
+		"maplibre-gl": "4.5.0",
+		"minisearch": "^7.0.2",
+		"next": "14.2.5",
+		"next-intl": "3.17.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
@@ -40,14 +40,14 @@
 		"yup": "1.4.0"
 	},
 	"devDependencies": {
-		"@types/node": "20.14.6",
+		"@types/node": "20.14.11",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
 		"@types/react-virtualized": "^9.21.30",
-		"postcss": "8.4.38",
-		"postcss-preset-mantine": "1.15.0",
+		"postcss": "8.4.39",
+		"postcss-preset-mantine": "1.16.0",
 		"postcss-simple-vars": "7.0.1",
-		"typescript": "5.4.5",
+		"typescript": "5.5.3",
 		"typescript-plugin-css-modules": "^5.1.0"
 	}
 }
