--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
 		"sharp": "0.33.4",
 		"swr": "2.2.5",
 		"ua-parser-js": "1.0.38",
+		"ukkonen": "^2.1.0",
 		"yup": "1.4.0"
 	},
 	"devDependencies": {
