--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
 		"embla-carousel-wheel-gestures": "8.0.1",
 		"inflected": "2.1.0",
 		"luxon": "3.4.4",
-		"maplibre-gl": "4.5.0",
+		"maplibre-gl": "4.5.1",
 		"minisearch": "^7.1.0",
 		"next": "14.2.5",
 		"next-intl": "3.17.2",
@@ -41,11 +41,12 @@
 		"yup": "1.4.0"
 	},
 	"devDependencies": {
-		"@types/node": "20.14.11",
+		"@types/node": "22.1.0",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/luxon": "3.4.2",
 		"@types/react-virtualized": "^9.21.30",
-		"postcss": "8.4.39",
+		"postcss": "8.4.40",
 		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
 		"typescript": "5.5.4",
