--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
 		"lint:fix": "eslint . --fix && npx stylelint . --fix"
 	},
 	"dependencies": {
-		"@carrismetropolitana/eslint": "20240722.1548.55",
 		"@mantine/carousel": "7.11.2",
 		"@mantine/charts": "7.11.2",
 		"@mantine/core": "7.11.2",
@@ -18,7 +17,7 @@
 		"@mantine/form": "7.11.2",
 		"@mantine/hooks": "7.11.2",
 		"@mantine/modals": "7.11.2",
-		"@piotr-cz/swr-idb-cache": "^1.0.3",
+		"@piotr-cz/swr-idb-cache": "1.0.3",
 		"@rajesh896/broprint.js": "2.1.1",
 		"@tabler/icons-react": "3.11.0",
 		"@turf/turf": "7.0.0",
@@ -27,29 +26,30 @@
 		"inflected": "2.1.0",
 		"luxon": "3.5.0",
 		"maplibre-gl": "4.5.1",
-		"minisearch": "^7.1.0",
+		"minisearch": "7.1.0",
 		"next": "14.2.5",
 		"next-intl": "3.17.2",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
-		"react-virtualized": "^9.22.5",
+		"react-virtualized": "9.22.5",
 		"sharp": "0.33.4",
 		"swr": "2.2.5",
 		"ua-parser-js": "1.0.38",
-		"ukkonen": "^2.1.0",
+		"ukkonen": "2.1.0",
 		"yup": "1.4.0"
 	},
 	"devDependencies": {
+		"@carrismetropolitana/eslint": "20240722.1548.55",
 		"@types/node": "22.1.0",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
 		"@types/luxon": "3.4.2",
-		"@types/react-virtualized": "^9.21.30",
+		"@types/react-virtualized": "9.21.30",
 		"postcss": "8.4.40",
 		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
 		"typescript": "5.5.4",
-		"typescript-plugin-css-modules": "^5.1.0"
+		"typescript-plugin-css-modules": "5.1.0"
 	}
 }
