--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,8 @@
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
 		"react-virtualized": "9.22.5",
+		"react-virtualized-auto-sizer": "^1.0.24",
+		"react-window": "^1.8.10",
 		"sharp": "0.33.4",
 		"swr": "2.2.5",
 		"ua-parser-js": "1.0.38",
@@ -41,10 +43,10 @@
 	},
 	"devDependencies": {
 		"@carrismetropolitana/eslint": "20240722.1548.55",
+		"@types/luxon": "3.4.2",
 		"@types/node": "22.1.0",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@types/luxon": "3.4.2",
 		"@types/react-virtualized": "9.21.30",
 		"postcss": "8.4.40",
 		"postcss-preset-mantine": "1.17.0",
