--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,10 @@
 		"@tabler/icons-react": "3.12.0",
 		"@turf/turf": "7.1.0",
 		"dayjs": "1.11.13",
+		"embla-carousel-react": "8.2.0",
 		"embla-carousel-wheel-gestures": "8.0.1",
 		"inflected": "2.1.0",
-		"jsonwebtoken": "^9.0.2",
+		"jsonwebtoken": "9.0.2",
 		"luxon": "3.5.0",
 		"maplibre-gl": "4.6.0",
 		"minisearch": "7.1.0",
@@ -33,20 +34,21 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
-		"react-qr-code": "^2.0.15",
+		"react-qr-code": "2.0.15",
 		"react-virtualized": "9.22.5",
-		"react-virtualized-auto-sizer": "^1.0.24",
-		"react-window": "^1.8.10",
+		"react-virtualized-auto-sizer": "1.0.24",
+		"react-window": "1.8.10",
+		"recharts": "2.12.7",
 		"sharp": "0.33.5",
 		"swr": "2.2.5",
 		"ua-parser-js": "1.0.38",
 		"ukkonen": "2.1.0",
-		"uuid": "^10.0.0",
+		"uuid": "10.0.0",
 		"yup": "1.4.0"
 	},
 	"devDependencies": {
 		"@carrismetropolitana/eslint": "20240722.1548.55",
-		"@types/jsonwebtoken": "^9.0.6",
+		"@types/jsonwebtoken": "9.0.6",
 		"@types/luxon": "3.4.2",
 		"@types/node": "22.5.0",
 		"@types/react": "18.3.4",
