--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
 		"react-qr-code": "2.0.15",
+		"react-toastify": "^10.0.5",
 		"react-virtualized": "9.22.5",
 		"react-virtualized-auto-sizer": "1.0.24",
 		"react-window": "1.8.10",
