--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"@rajesh896/broprint.js": "2.1.1",
 		"@tabler/icons-react": "3.12.0",
 		"@turf/turf": "7.1.0",
+		"classnames": "^2.5.1",
 		"dayjs": "1.11.13",
 		"embla-carousel-react": "8.2.0",
 		"embla-carousel-wheel-gestures": "8.0.1",
@@ -34,6 +35,7 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
+		"react-nice-avatar": "^1.5.0",
 		"react-qr-code": "2.0.15",
 		"react-toastify": "^10.0.5",
 		"react-virtualized": "9.22.5",
