--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -168,6 +168,7 @@ http {
         proxy_read_timeout 20s;
         proxy_set_header Connection "";
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_next_upstream error timeout http_500;
 
 
