--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@mantine/form": "7.12.1",
 		"@mantine/hooks": "7.12.1",
 		"@mantine/modals": "7.12.1",
+		"@mantine/notifications": "^7.12.1",
 		"@piotr-cz/swr-idb-cache": "1.1.0",
 		"@rajesh896/broprint.js": "2.1.1",
 		"@tabler/icons-react": "3.14.0",
@@ -37,7 +38,6 @@
 		"react-map-gl": "7.1.7",
 		"react-nice-avatar": "^1.5.0",
 		"react-qr-code": "2.0.15",
-		"react-toastify": "^10.0.5",
 		"react-virtualized": "9.22.5",
 		"react-virtualized-auto-sizer": "1.0.24",
 		"react-window": "1.8.10",
