refactor: Update footer navigation links to use settings file

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,15 +5,16 @@
 		"module": "esnext",
 		"moduleResolution": "bundler",
 		"paths": {
-			"@/actions/*": ["actions/*"],
 			"@/utils/*": ["utils/*"],
 			"@/types/*": ["types/*"],
 			"@/hooks/*": ["hooks/*"],
 			"@/styles/*": ["styles/*"],
+			"@/actions/*": ["actions/*"],
+			"@/settings/*": ["settings/*"],
 			"@/contexts/*": ["contexts/*"],
 			"@/opengraph/*": ["opengraph/*"],
 			"@/components/*": ["components/*"],
-			"@/translations/*": ["translations/*"]
+			"@/translations/*": ["translations/*"],
 		},
 		"allowJs": true,
 		"sourceMap": true,
