--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
 		"module": "esnext",
 		"moduleResolution": "bundler",
 		"paths": {
+			"@/api/*": ["api/*"],
 			"@/utils/*": ["utils/*"],
 			"@/types/*": ["types/*"],
 			"@/hooks/*": ["hooks/*"],
