Project re-organization (3rd try)
The project was re-organized to better separate different sets of views: website, apps, mupi. Mantine theme was also extended to support different styles for each view.

--- a/frontend-old/tsconfig.json
+++ b/frontend-old/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "NodeNext",
     "paths": {
       "@/authentication/*": ["authentication/*"],
-      "@/styles/*": ["styles/*"],
+      "@/themes/*": ["styles/*"],
       "@/utils/*": ["utils/*"],
       "@/forms/*": ["forms/*"],
       "@/components/*": ["components/*"],
