Revised Next-Intl implementation to ensure proper handling of locale aliases

--- a/frontend-old/tsconfig.json
+++ b/frontend-old/tsconfig.json
@@ -17,7 +17,7 @@
       "@/scripts/*": ["scripts/*"],
       "@/services/*": ["services/*"],
       "@/schemas/*": ["schemas/*"],
-      "@/translations/*": ["translations/*"]
+      "@/i18n/*": ["translations/*"]
     },
     "allowJs": true,
     "outDir": "build",
