--- a/videowall/tsconfig.json
+++ b/videowall/tsconfig.json
@@ -14,7 +14,7 @@
 			"@/schemas/*": ["schemas/*"],
 			"@/services/*": ["services/*"],
 			"@/components/*": ["components/*"],
-      "@/translations/*": ["translations/*"],
+      "@/i18n/*": ["translations/*"],
     },
     "allowJs": true,
     "outDir": "build",
