Composability in CSS styles, opt /api out of caching

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -172,6 +172,17 @@ http {
         proxy_next_upstream error timeout http_500;
 
 
+		location /api {
+            # Add headers
+            add_header Cache-Control "public, max-age=5"; # Cache responses for 5 seconds§§
+            add_header X-Cache-Skip $skip_reason;
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Strict-Transport-Security "max-age=31536000" always;
+            # Proxy connect
+            proxy_pass http://frontend_upstream;
+        }
+
         location / {
             # Add headers
             add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds§§
