--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -173,6 +173,9 @@ http {
 
 
 		location /api {
+            # Proxy cache
+            proxy_cache_valid 200 5s; # Cache responses for 5 seconds
+            proxy_cache_valid 404 5s; # Cache responses for 5 seconds
             # Add headers
             add_header Cache-Control "public, max-age=5"; # Cache responses for 5 seconds§§
             add_header X-Cache-Skip $skip_reason;
