--- a/videowall/package.json
+++ b/videowall/package.json
@@ -10,33 +10,33 @@
 		"lint:fix": "eslint . --fix && npx stylelint . --fix"
 	},
 	"dependencies": {
-		"@carrismetropolitana/eslint": "2024.6.1717593318",
-		"@mantine/charts": "7.10.2",
-		"@mantine/core": "7.10.2",
-		"@mantine/hooks": "7.10.2",
-		"@tabler/icons-react": "3.6.0",
+		"@carrismetropolitana/eslint": "20240911.1104.10",
+		"@mantine/charts": "7.12.2",
+		"@mantine/core": "7.12.2",
+		"@mantine/hooks": "7.12.2",
+		"@tabler/icons-react": "3.17.0",
 		"dotenv": "16.4.5",
-		"luxon": "3.4.4",
-		"mongodb": "6.7.0",
-		"next": "14.2.4",
-		"next-intl": "3.15.2",
+		"luxon": "3.5.0",
+		"mongodb": "6.9.0",
+		"next": "14.2.12",
+		"next-intl": "3.19.3",
 		"papaparse": "5.4.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"recharts": "2.12.7",
-		"sharp": "0.33.4",
-		"ssh2": "1.15.0",
+		"sharp": "0.33.5",
+		"ssh2": "1.16.0",
 		"swr": "2.2.5",
 		"tunnel-ssh": "5.1.2"
 	},
 	"devDependencies": {
-		"@types/node": "20.14.6",
-		"@types/react": "18.3.3",
+		"@types/node": "22.5.5",
+		"@types/react": "18.3.7",
 		"@types/react-dom": "18.3.0",
-		"postcss": "8.4.38",
-		"postcss-preset-mantine": "1.15.0",
+		"postcss": "8.4.47",
+		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
-		"typescript": "5.4.5"
+		"typescript": "5.6.2"
 	},
 	"browser": {
 		"crypto": false,
