--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
 		"@piotr-cz/swr-idb-cache": "1.1.0",
 		"@rajesh896/broprint.js": "2.1.1",
 		"@tabler/icons-react": "3.17.0",
-		"@turf/turf": "7.1.0",
+		"@turf/turf": "^7.1.0",
 		"classnames": "2.5.1",
 		"dayjs": "1.11.13",
 		"embla-carousel-react": "8.3.0",
