Apply new domain

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -110,7 +110,7 @@ http {
 
         listen 80;
         listen [::]:80;
-        server_name alpha.carrismetropolitana.pt www.alpha.carrismetropolitana.pt;
+        server_name cmet.pt www.cmet.pt alpha.carrismetropolitana.pt www.alpha.carrismetropolitana.pt;
         server_tokens off;
 
         location /.well-known/acme-challenge/ {
@@ -131,13 +131,13 @@ http {
 
         listen 443 ssl;
         listen [::]:443 ssl;
-        server_name alpha.carrismetropolitana.pt www.alpha.carrismetropolitana.pt;
+        server_name cmet.pt www.cmet.pt alpha.carrismetropolitana.pt www.alpha.carrismetropolitana.pt;
         server_tokens off;
         http2 on;
 
         # Lets Encrypt Certificates
-        ssl_certificate /etc/letsencrypt/live/alpha.carrismetropolitana.pt/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/alpha.carrismetropolitana.pt/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/cmet.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cmet.pt/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
         ssl_early_data on;
