--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /frontend/translations/en.json
-    translation: /frontend/translations/%two_letters_code%.json
+  - source: /frontend/i18n/pt-PT.json
+    translation: /frontend/i18n/%two_letters_code%.json
