--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
 		"minisearch": "7.1.0",
 		"next": "14.2.14",
 		"next-intl": "3.20.0",
+		"nuqs": "^1.19.3",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
