--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,7 @@
 		"esModuleInterop": true,
 		"incremental": true,
 		"isolatedModules": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"lib": [
 			"dom",
 			"dom.iterable",
@@ -15,7 +15,9 @@
 		"moduleResolution": "bundler",
 		"noEmit": true,
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": [
+				"./*"
+			]
 		},
 		"plugins": [
 			{
