--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -13,7 +13,7 @@ jobs:
 
   website-frontend:
     name: frontend (NextJS)
-    runs-on: ubuntu-latest-arm
+    runs-on: ubuntu-24.04-arm
     strategy:
       fail-fast: false
     permissions:
