--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -13,8 +13,7 @@ jobs:
 
   website-frontend:
     name: frontend (NextJS)
-    # runs-on: ubuntu-latest
-    runs-on: macos-15
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
     permissions:
