--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 project_id_env: CROWDIN_PROJECT_ID
 api_token_env: CROWDIN_PERSONAL_TOKEN
 files:
-  - source: /frontend/i18n/pt-PT.json
-    translation: /frontend/i18n/%locale%.json
+  - source: /frontend/i18n/translations/pt.json
+    translation: /frontend/i18n/translations/%locale%.json
