--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,4 +2,4 @@ project_id_env: CROWDIN_PROJECT_ID
 api_token_env: CROWDIN_PERSONAL_TOKEN
 files:
   - source: /frontend/i18n/translations/pt.json
-    translation: /frontend/i18n/translations/%locale%.json
+    translation: /frontend/i18n/translations/%two_letters_code%.json
