--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -179,8 +179,8 @@ http {
             proxy_cache_valid 404 5s; # Cache responses for 5 seconds
             # Add headers
             add_header Cache-Control "public, max-age=5"; # Cache responses for 5 seconds§§
-            add_header X-Cache-Skip $skip_reason;
-            add_header X-Cache-Status $upstream_cache_status;
+            add_header CMET-Cache-Skip $skip_reason;
+            add_header CMET-Cache-Status $upstream_cache_status;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Strict-Transport-Security "max-age=31536000" always;
             # Proxy connect
@@ -190,8 +190,8 @@ http {
         location / {
             # Add headers
             add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds§§
-            add_header X-Cache-Skip $skip_reason;
-            add_header X-Cache-Status $upstream_cache_status;
+            add_header CMET-Cache-Skip $skip_reason;
+            add_header CMET-Cache-Status $upstream_cache_status;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Strict-Transport-Security "max-age=31536000" always;
             # Proxy connect
@@ -294,8 +294,8 @@ http {
 			auth_basic_user_file /etc/nginx/.htpasswd;
             # Add headers
             add_header Cache-Control "public, max-age=60"; # Cache responses for 60 seconds§§
-            add_header X-Cache-Skip $skip_reason;
-            add_header X-Cache-Status $upstream_cache_status;
+            add_header CMET-Cache-Skip $skip_reason;
+            add_header CMET-Cache-Status $upstream_cache_status;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Strict-Transport-Security "max-age=31536000" always;
             # Proxy connect
